# LittlePhysics

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Demo/: CMakeLists.txt  imgui_impl_glfw.cpp  main.cpp  renderer.cpp  renderer.h  utils.h
LittlePhysicsEngine/: CMakeLists.txt  LittlePhysics.cpp  LittlePhysics.h
glad/: CmakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/imgui/: CMakeLists.txt
include/LittlePhysics/: Body.h  CollisionBroadPhase.h  CollisionManager.h  CollisionNarrowPhase.h  Constraint.h  Contact.h  Core.h  DataTypes.h  LittlePhysics.h  Math.h  Shape.h  Stack.h  StackAllocator.h  World.h
src/: Body.cpp  CMakeLists.txt  LittlePhysics.cpp  Shape.cpp  Stack.cpp  StackAllocator.cpp  World.cpp
src/Collision/: CollisionBroadPhase.cpp  CollisionManager.cpp  CollisionNarrowPhase.cpp
